[java] For java 9+ make sure we use non deprecated new instance